include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

# Arrays Tests
add_executable(ArraysTests ArraysTests.cpp)
target_link_libraries(ArraysTests LeetCodeLib GTest::gtest_main)
add_test(NAME ArraysTests COMMAND ArraysTests)